--- a/exercicios-web/poxedex/main.html
+++ b/exercicios-web/poxedex/main.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
-        <!--Arquivo CSS  -->
-        <link rel="stylesheet" href="./assets/css/global.css">
+
+    <!--Arquivo CSS  -->
+    <link rel="stylesheet" href="./assets/css/global.css">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,22 +22,25 @@
 </head>
 
 <body>
-    <h1>Poxedex</h1>
-    <p>Este será um site para a API de pokemon</p>
+    <section class="content">
+        <h1>Poxedex</h1>
 
-    <button id="btnTeste">Pokebola</button>
+        <ol class="pokemons">
+            <li class="pokemon">
+                <span class="number">#001</span>
+                <spam class="name">Bulbasaur</spam>
+                <div class="details">
+                    <ol class="types">
+                        <li class="type">Grass</li>
+                        <li class="type">Poison</li>
+                    </ol>
+                     <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bulbasaur">
+                </div>
+            </li>
+        </ol>
 
-    <script src="./assets/js/main.js">
-        // //objetos e estruturas particulares da web
-        // //window - nossa janela, o browser
-        // //document - o documento, este html
-
-        // const btnTeste = document.getElementById("btnTeste")
-        // btnTeste.addEventListener("click", function(){
-        //     console.log("Clicou no botão")
-        //})
-
-    </script>
+    </section>
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
