--- a/exercicios-web/poxedex/main.html
+++ b/exercicios-web/poxedex/main.html
@@ -11,6 +11,7 @@
 
     <!--Arquivo CSS  -->
     <link rel="stylesheet" href="./assets/css/global.css">
+    <link rel="stylesheet" href="./assets/css/pokedex.css">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
