EXERCICIO WEB - POKEDEX - Pegando as informações básicas da API e tratando

--- a/exercicios-web/pokedex/main.html
+++ b/exercicios-web/pokedex/main.html
@@ -24,9 +24,9 @@
 
 <body>
     <section class="content">
-        <h1>Poxedex</h1>
+        <h1>Pokedex</h1>
 
-        <ol class="pokemons">
+        <ol id="pokemonList" class="pokemons">
             <li class="pokemon">
                 <span class="number">#001</span>
                 <spam class="name">Bulbasaur</spam>
@@ -41,6 +41,7 @@
         </ol>
 
     </section>
+    <script src="./assets/js/poke-api.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 
