--- a/exercicios-web/pokedex/main.html
+++ b/exercicios-web/pokedex/main.html
@@ -27,7 +27,7 @@
         <h1>Pokedex</h1>
 
         <ol id="pokemonList" class="pokemons">
-            <li class="pokemon">
+            <!-- <li class="pokemon">
                 <span class="number">#001</span>
                 <spam class="name">Bulbasaur</spam>
                 <div class="details">
@@ -37,7 +37,7 @@
                     </ol>
                      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bulbasaur">
                 </div>
-            </li>
+            </li> -->
         </ol>
 
     </section>
