--- a/exercicios-web/pokedex/main.html
+++ b/exercicios-web/pokedex/main.html
@@ -40,7 +40,13 @@
             </li> -->
         </ol>
 
+        <div class="pagination">
+            <button id="loadMoreButton" type="button">Load More</button>
+        </div>
+
     </section>
+    <!-- Javascript -->
+    <script src="./assets/js/pokemon-model.js"></script>
     <script src="./assets/js/poke-api.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
